--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My First Website!</title>
 </head>
 <body>
-
+    <a href="newpage.html"> New Page</a><br>
+    <a href="register.html"> Register</a>
 </body>
 </html>
