--- a/register.html
+++ b/register.html
@@ -5,6 +5,21 @@
     <title>Register</title>
 </head>
 <body>
+    <form>
+        First Name: <input type = "text"> <br>
+        Last Name: <input type = "text"> <br>
+        Email: <input type = "email" required> <br>
+        Birthday: <input type = "date"><br>
+        Gender:<br>
+        <input type = "radio" name="gender">Male <br>
+        <input type = "radio" name="gender">Female <br>
+        <input type = "radio" name="gender">Other <br>
+        Pets: <br>
+        <input type = "checkbox"> Cat<br>
+        <input type = "checkbox"> Dog <br>
+        <input type = "submit" value = "Register"><br>
+        <input type = "reset">
 
+    </form>
 </body>
 </html>
