--- a/register.html
+++ b/register.html
@@ -5,18 +5,24 @@
     <title>Register</title>
 </head>
 <body>
-    <form>
-        First Name: <input type = "text"> <br>
-        Last Name: <input type = "text"> <br>
-        Email: <input type = "email" required> <br>
+    <form method = "GET">
+        First Name: <input type = "text" name = "firstname"> <br>
+        Last Name: <input type = "text" name = "lastname"> <br>
+        Email: <input type = "email" required name = "email"> <br>
+        Password: <input type = "password" minlength="10" name = "password"><br>
         Birthday: <input type = "date"><br>
         Gender:<br>
-        <input type = "radio" name="gender">Male <br>
-        <input type = "radio" name="gender">Female <br>
-        <input type = "radio" name="gender">Other <br>
+        <input type = "radio" name="gender" value = "Male">Male <br>
+        <input type = "radio" name="gender" value = "Female">Female <br>
+        <input type = "radio" name="gender" value = "Other">Other <br>
         Pets: <br>
         <input type = "checkbox"> Cat<br>
         <input type = "checkbox"> Dog <br>
+        Cars: <br>
+        <select name = "cars">
+            <option value = "volvo">Volvo</option>
+            <option value = "Audi">Audi</option>
+        </select><br>
         <input type = "submit" value = "Register"><br>
         <input type = "reset">
 
