initial website done

--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
     <title>Register</title>
 </head>
 <body>
+<!--    Use Get, not Post -->
     <form method = "GET">
         First Name: <input type = "text" name = "firstname"> <br>
         Last Name: <input type = "text" name = "lastname"> <br>
